cmss/main/default/objects/Account/fields/IdentificationStateId__c.field-meta.xml
<CustomField>
    <fullName>IdentificationStateId__c</fullName>
    <label>Identification StateId</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>95</fullName>
            </value>
            <value>
                <fullName>96</fullName>
            </value>
            <value>
                <fullName>97</fullName>
            </value>
            <value>
                <fullName>98</fullName>
            </value>
            <value>
                <fullName>99</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>