cmss/main/default/objects/Account/fields/IdentificationStateUpdated__c.field-meta.xml
<CustomField>
    <fullName>IdentificationStateUpdated__c</fullName>
    <description>Datum aktualizace stavu identifikace</description>
    <label>Identification State Updated</label>
    <type>Date</type>
</CustomField>