cmss/main/default/objects/Account/fields/InterestRateInterimLoan__c.field-meta.xml
<CustomField>
    <fullName>InterestRateInterimLoan__c</fullName>
    <description>Úroková sazba pro meziúvěr</description>
    <label>Interest Rate Interim Loan</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>