cmss/main/default/objects/Account/fields/InvestmentLifeInsuranceCount__c.field-meta.xml
<CustomField>
    <fullName>InvestmentLifeInsuranceCount__c</fullName>
    <description>Počet investičních životních pojištění, plněno pomocí DLRS</description>
    <label>Investment Life Insurance Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>