cmss/main/default/objects/Account/fields/ISector__c.field-meta.xml
<CustomField>
    <fullName>ISector__c</fullName>
    <description>Kód institucionálního sektoru.</description>
    <label>iSector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10000</fullName>
            </value>
            <value>
                <fullName>11000</fullName>
            </value>
            <value>
                <fullName>11001</fullName>
            </value>
            <value>
                <fullName>11002</fullName>
            </value>
            <value>
                <fullName>11003</fullName>
            </value>
            <value>
                <fullName>12000</fullName>
            </value>
            <value>
                <fullName>12100</fullName>
            </value>
            <value>
                <fullName>12200</fullName>
            </value>
            <value>
                <fullName>12201</fullName>
            </value>
            <value>
                <fullName>12202</fullName>
            </value>
            <value>
                <fullName>12203</fullName>
            </value>
            <value>
                <fullName>12300</fullName>
            </value>
            <value>
                <fullName>12301</fullName>
            </value>
            <value>
                <fullName>12302</fullName>
            </value>
            <value>
                <fullName>12303</fullName>
            </value>
            <value>
                <fullName>12400</fullName>
            </value>
            <value>
                <fullName>12401</fullName>
            </value>
            <value>
                <fullName>12402</fullName>
            </value>
            <value>
                <fullName>12403</fullName>
            </value>
            <value>
                <fullName>12500</fullName>
            </value>
            <value>
                <fullName>12501</fullName>
            </value>
            <value>
                <fullName>12502</fullName>
            </value>
            <value>
                <fullName>12503</fullName>
            </value>
            <value>
                <fullName>12600</fullName>
            </value>
            <value>
                <fullName>12601</fullName>
            </value>
            <value>
                <fullName>12602</fullName>
            </value>
            <value>
                <fullName>12603</fullName>
            </value>
            <value>
                <fullName>12700</fullName>
            </value>
            <value>
                <fullName>12701</fullName>
            </value>
            <value>
                <fullName>12702</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>