cmss/main/default/objects/Account/fields/IsForeigner__c.field-meta.xml
<CustomField>
    <fullName>IsForeigner__c</fullName>
    <description>Cizinec</description>
    <formula>NOT(ISPICKVAL(Nationality__c ,&#39;16&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Foreigner</label>
    <type>Checkbox</type>
</CustomField>