cmss/main/default/objects/Account/fields/IsIdCardInvalid__c.field-meta.xml
<CustomField>
    <fullName>IsIdCardInvalid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Neplatný doklad</description>
    <label>Is Id Card Invalid</label>
    <type>Checkbox</type>
</CustomField>