cmss/main/default/objects/Account/fields/IsInvalid__c.field-meta.xml
<CustomField>
    <fullName>IsInvalid__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This account has been invalidated due to conslidation. Account is hidden and will be deleted in future.</inlineHelpText>
    <label>Is Invalid</label>
    <type>Checkbox</type>
</CustomField>