cmss/main/default/objects/Account/fields/IsLegallyIncompetent__c.field-meta.xml
<CustomField>
    <fullName>IsLegallyIncompetent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Omezená svéprávnost</description>
    <label>Is Legally Incompetent</label>
    <type>Checkbox</type>
</CustomField>