cmss/main/default/objects/Account/fields/IsPoliticallyExposed__c.field-meta.xml
<CustomField>
    <fullName>IsPoliticallyExposed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Politicky exponovaná osoba</description>
    <label>Is Politically Exposed</label>
    <type>Checkbox</type>
</CustomField>