cmss/main/default/objects/Account/fields/IsResident__c.field-meta.xml
<CustomField>
    <fullName>IsResident__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Rezident</description>
    <label>Is Resident</label>
    <type>Checkbox</type>
</CustomField>