cmss/main/default/objects/Account/fields/LastAmlReviewDate__c.field-meta.xml
<CustomField>
    <fullName>LastAmlReviewDate__c</fullName>
    <label>Last AML Review Date</label>
    <type>Date</type>
</CustomField>