cmss/main/default/objects/Account/fields/LastCsProductEndDate__c.field-meta.xml
<CustomField>
    <fullName>LastCsProductEndDate__c</fullName>
    <description>Datum ukončení poslední CS smlouvy</description>
    <label>Last CS Product End Date</label>
    <type>Date</type>
</CustomField>