cmss/main/default/objects/Account/fields/LastIdentificationType__c.field-meta.xml
<CustomField>
    <fullName>LastIdentificationType__c</fullName>
    <label>Type of Last Identification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>