cmss/main/default/objects/Account/fields/LastInteractionDate__c.field-meta.xml
<CustomField>
    <fullName>LastInteractionDate__c</fullName>
    <label>Last Interaction Date</label>
    <type>Date</type>
</CustomField>