cmss/main/default/objects/Account/fields/LastPortfolioManagerA__c.field-meta.xml
<CustomField>
    <fullName>LastPortfolioManagerA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Datum poslední změny správy stavu A, plněno při změně Portfolio Manager A</description>
    <label>Last Portfolio Manager A</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LastPortfoloManagerAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>