cmss/main/default/objects/Account/fields/LastProductEndDate__c.field-meta.xml
<CustomField>
    <fullName>LastProductEndDate__c</fullName>
    <description>Datum ukončení poslední smlouvy</description>
    <label>Last Product End Date</label>
    <type>Date</type>
</CustomField>