cmss/main/default/objects/Account/fields/LastPtfManAChangeDate__c.field-meta.xml
<CustomField>
    <fullName>LastPtfManAChangeDate__c</fullName>
    <description>Datum poslední změny správy stavu A, plněno při změně Portfolio Manager A</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Ptf Man A Change Date</label>
    <type>Date</type>
</CustomField>