cmss/main/default/objects/Account/fields/LastSbProductEndDate__c.field-meta.xml
<CustomField>
    <fullName>LastSbProductEndDate__c</fullName>
    <description>Datum ukončení posledního kmenového produktu</description>
    <label>Last SB Product End Date</label>
    <type>Date</type>
</CustomField>