cmss/main/default/objects/Account/fields/LifeInsuranceCount__c.field-meta.xml
<CustomField>
    <fullName>LifeInsuranceCount__c</fullName>
    <label>Life Insurance Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>