cmss/main/default/objects/Account/fields/LoanCaseCount__c.field-meta.xml
<CustomField>
    <fullName>LoanCaseCount__c</fullName>
    <label>Loan Case Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>