cmss/main/default/objects/Account/fields/MaidenName__c.field-meta.xml
<CustomField>
    <fullName>MaidenName__c</fullName>
    <description>Rodné příjmení</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Maiden Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>