cmss/main/default/objects/Account/fields/MaritalStatusChanged__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatusChanged__c</fullName>
    <description>Datum změny rodinného stavu</description>
    <label>Marital Status Changed</label>
    <type>Date</type>
</CustomField>