cmss/main/default/objects/Account/fields/MonthlyLoadSum__c.field-meta.xml
<CustomField>
    <fullName>MonthlyLoadSum__c</fullName>
    <inlineHelpText>Součet částek Měsíční výdaj pro produkty, kde je klient hlavním účastníkem. Nikoliv jako „zákonný zástupce“, „spoludlužník“, „přistupitel“, „pojištěný“ atd.</inlineHelpText>
    <label>Monthly Load Sum</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>