cmss/main/default/objects/Account/fields/MortgageCount__c.field-meta.xml
<CustomField>
    <fullName>MortgageCount__c</fullName>
    <label>Mortgage Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>