cmss/main/default/objects/Account/fields/NextAmlReviewDate__c.field-meta.xml
<CustomField>
    <fullName>NextAmlReviewDate__c</fullName>
    <description>Date of next AML Review</description>
    <inlineHelpText>Datum příští aktualizace AML údajů</inlineHelpText>
    <label>Next AML Review</label>
    <type>Date</type>
</CustomField>