cmss/main/default/objects/Account/fields/NonLifeInsuranceCount__c.field-meta.xml
<CustomField>
    <fullName>NonLifeInsuranceCount__c</fullName>
    <label>Non Life Insurance Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>