cmss/main/default/objects/Account/fields/Offers__c.field-meta.xml
<CustomField>
    <fullName>Offers__c</fullName>
    <formula>&quot;Předschválený limit: &quot; &amp;  TEXT(PreapprovedLimit__c) &amp; IF( ISBLANK( PreapprovedLimit__c ),&quot;&quot;,&quot; Kč&quot;) &amp; BR() &amp; 
&quot;Dostupná nezajištěná částka MÚ: &quot; &amp; TEXT(AmountOffer__c) &amp; IF( ISBLANK( AmountOffer__c ),&quot;&quot;,&quot; Kč&quot;) &amp; &quot; / &quot; &amp; TEXT(InterestRateInterimLoan__c) &amp; IF( ISBLANK( InterestRateInterimLoan__c ),&quot;&quot;,&quot; %&quot;) &amp; BR() &amp;
&quot;Aktuální předschválená částka SÚ: &quot; &amp;  TEXT(  ValidPreApprovedAmount__c ) &amp; IF( ISBLANK( ValidPreApprovedAmount__c ),&quot;&quot;,&quot; Kč&quot;) &amp; BR() &amp;
&quot;Podmínky premium: &quot; &amp;  IF( PremiumConditions__c = true, &quot;Ano&quot;, &quot;Ne&quot;)</formula>
    <label>Offers</label>
    <type>Text</type>
</CustomField>