cmss/main/default/objects/Account/fields/OpenedActivityDate__c.field-meta.xml
<CustomField>
    <fullName>OpenedActivityDate__c</fullName>
    <label>Opened Activity Date</label>
    <type>Date</type>
</CustomField>