cmss/main/default/objects/Account/fields/OpenedOpportunityDate__c.field-meta.xml
<CustomField>
    <fullName>OpenedOpportunityDate__c</fullName>
    <label>Opened Opportunity Date</label>
    <type>Date</type>
</CustomField>