cmss/main/default/objects/Account/fields/OpenOpportunitiesCount__c.field-meta.xml
<CustomField>
    <fullName>OpenOpportunitiesCount__c</fullName>
    <description>Počet otevřených příležitostí</description>
    <label>Open Opportunities Count</label>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>false</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>