cmss/main/default/objects/Account/fields/PensionProductCount__c.field-meta.xml
<CustomField>
    <fullName>PensionProductCount__c</fullName>
    <description>Počet penzijního připojištění, plněno pomocí DLRS</description>
    <label>Pension Product Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>