cmss/main/default/objects/Account/fields/PersonAge__c.field-meta.xml
<CustomField>
    <fullName>PersonAge__c</fullName>
    <label>Person Age</label>
    <length>5</length>
    <type>Text</type>
</CustomField>