cmss/main/default/objects/Account/fields/PersonalIdentificationNr__c.field-meta.xml
<CustomField>
    <fullName>PersonalIdentificationNr__c</fullName>
    <description>Rodné číslo</description>
    <label>Personal Identification Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>