cmss/main/default/objects/Account/fields/PersonBirthday__c.field-meta.xml
<CustomField>
    <fullName>PersonBirthday__c</fullName>
    <label>Person Birthday</label>
    <type>Date</type>
</CustomField>