cmss/main/default/objects/Account/fields/PlaceOfBirth__c.field-meta.xml
<CustomField>
    <fullName>PlaceOfBirth__c</fullName>
    <description>Místo narození</description>
    <label>Place of Birth</label>
    <length>50</length>
    <type>Text</type>
</CustomField>