cmss/main/default/objects/Account/fields/PMOCount__c.field-meta.xml
<CustomField>
    <fullName>PMOCount__c</fullName>
    <description>Počet pojištění majetku a odpovědnosti, plněno pomocí DLRS</description>
    <label>PMO Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>