cmss/main/default/objects/Account/fields/PortfolioMngmtA__c.field-meta.xml
<CustomField>
    <fullName>PortfolioMngmtA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Správce stavu A - Jedinečný identifikátor pro entitu Odbytový orgán přidruženou k entitě Klient</description>
    <label>Portfolio Management A</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ManagedAccountsA</relationshipName>
    <type>Lookup</type>
</CustomField>