cmss/main/default/objects/Account/fields/PreapprovedLimit__c.field-meta.xml
<CustomField>
    <fullName>PreapprovedLimit__c</fullName>
    <description>Předschválený limit</description>
    <label>Preapproved Limit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>