cmss/main/default/objects/Account/fields/PremiumConditions__c.field-meta.xml
<CustomField>
    <fullName>PremiumConditions__c</fullName>
    <description>Podmínky Premium</description>
    <formula>1=1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premium Conditions</label>
    <type>Checkbox</type>
</CustomField>