cmss/main/default/objects/Account/fields/RiskClass__c.field-meta.xml
<CustomField>
    <fullName>RiskClass__c</fullName>
    <label>Risk Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>