cmss/main/default/objects/Account/fields/RiskLifeInsuranceCount__c.field-meta.xml
<CustomField>
    <fullName>RiskLifeInsuranceCount__c</fullName>
    <label>Risk Life Insurance Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>