cmss/main/default/objects/Account/fields/SalesRep__c.field-meta.xml
<CustomField>
    <fullName>SalesRep__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Role osoby - pokud je zároveň OZ, je zaškrtnuto.</description>
    <label>Sales Rep</label>
    <type>Checkbox</type>
</CustomField>