cmss/main/default/objects/Account/fields/SalesRepCPU__c.field-meta.xml
<CustomField>
    <fullName>SalesRepCPU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep CPU</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>