cmss/main/default/objects/Account/fields/SavingsAccountCount__c.field-meta.xml
<CustomField>
    <fullName>SavingsAccountCount__c</fullName>
    <label>Savings Account Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>