cmss/main/default/objects/Account/fields/SbId__c.field-meta.xml
<CustomField>
    <fullName>SbId__c</fullName>
    <description>Starbuild ID</description>
    <externalId>true</externalId>
    <label>SB Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>