cmss/main/default/objects/Account/fields/SmartFirstLogin__c.field-meta.xml
<CustomField>
    <fullName>SmartFirstLogin__c</fullName>
    <description>SMART - první přihlášení</description>
    <label>Smart First Login</label>
    <type>Date</type>
</CustomField>