cmss/main/default/objects/Account/fields/SmartLastLogin__c.field-meta.xml
<CustomField>
    <fullName>SmartLastLogin__c</fullName>
    <description>SMART - poslední přihlášení</description>
    <label>Smart Last Login</label>
    <type>Date</type>
</CustomField>