cmss/main/default/objects/Account/fields/SmartLoginIn92Days__c.field-meta.xml
<CustomField>
    <fullName>SmartLoginIn92Days__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SMART - přihlášení za poslední 3 měsíce</description>
    <label>Smart Login In 92 Days</label>
    <type>Checkbox</type>
</CustomField>