cmss/main/default/objects/Account/fields/SmartLoginLastYear__c.field-meta.xml
<CustomField>
    <fullName>SmartLoginLastYear__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SMART - přihlášení ke konci min. roku</description>
    <label>Smart Login Last Year</label>
    <type>Checkbox</type>
</CustomField>