cmss/main/default/objects/Account/fields/SmartSuccessLogin__c.field-meta.xml
<CustomField>
    <fullName>SmartSuccessLogin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SMART - úspěšné přihlášení</description>
    <label>Smart Success Login</label>
    <type>Checkbox</type>
</CustomField>