cmss/main/default/objects/Account/fields/UserPortfolioMngmtC__c.field-meta.xml
<CustomField>
    <fullName>UserPortfolioMngmtC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Správce stavu C - Jedinečný identifikátor pro entitu Odbytový orgán přidruženou k entitě Klient</description>
    <label>Portfolio Management C</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ManagedAccountsC</relationshipName>
    <type>Lookup</type>
</CustomField>