cmss/main/default/objects/Account/fields/ValidPreApprovedAmount__c.field-meta.xml
<CustomField>
    <fullName>ValidPreApprovedAmount__c</fullName>
    <formula>IF( CurrPreApprovedAmountValidTo__c &gt;= TODAY(),  CurrentPreApprovedAmount__c ,  IF( AND(CurrPreApprovedAmountValidTo__c &lt;= TODAY(), FuturePreApprovedAmountValidTo__c  &gt;= TODAY()),  FuturePreApprovedAmount__c , null ))</formula>
    <label>Valid PreApproved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>