cmss/main/default/objects/Account/fields/VatNumber__c.field-meta.xml
<CustomField>
    <fullName>VatNumber__c</fullName>
    <description>DIČ</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Vat Number</label>
    <type>TextArea</type>
</CustomField>