cmss/main/default/objects/Account/recordTypes/CommunityAccount.recordType-meta.xml
<RecordType>
    <fullName>CommunityAccount</fullName>
    <active>true</active>
    <label>Community Account</label>
</RecordType>