cmss/main/default/objects/Account/listViews/AccountsWithOpenedOpportunity.listView-meta.xml
<ListView>
    <fullName>AccountsWithOpenedOpportunity</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_LAST_NAME</columns>
    <columns>PersonalIdentificationNr__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>Age__c</columns>
    <columns>PortfolioMngmtA__c</columns>
    <columns>LastProductEndDate__c</columns>
    <columns>GlobalId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PersonType__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OpenOpportunitiesCount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <label>Klienti s otevřenou OP</label>
</ListView>