cmss/main/default/objects/Account/listViews/AccountsWithoutCA.listView-meta.xml
<ListView>
    <fullName>AccountsWithoutCA</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_LAST_NAME</columns>
    <columns>PersonalIdentificationNr__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>Age__c</columns>
    <columns>PortfolioMngmtA__c</columns>
    <columns>GlobalId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CurrentAccountCount__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <label>Klienti bez běžného účtu ČSOB</label>
</ListView>