cmss/main/default/objects/Account/listViews/AddressingNonpersonalized.listView-meta.xml
<ListView>
    <fullName>AddressingNonpersonalized</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_LAST_NAME</columns>
    <columns>PersonalIdentificationNr__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>PersonAge__c</columns>
    <columns>PortfolioMngmtA__c</columns>
    <columns>AddressingNonpersonalized__c</columns>
    <columns>GlobalId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <filters>
        <field>AddressingNonpersonalized__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>AddressingNonpersonalized__c</field>
        <operation>equals</operation>
    </filters>
    <label>Klienti bez platného souhlasu</label>
</ListView>